--- a/index.html
+++ b/index.html
@@ -1,25 +1,3 @@
-<?php 
-  
-  if(isset($_POST['email']))
-
-  {
-   // print_r($_POST['nome']);
-    //print_r($_POST['email']);
-   // print_r($_POST['telefone']);
-   // print_r($_POST['mensagem']);
-
-   include_once('conexao.php');
-
-   $nome = $_POST['nome'];
-   $email = $_POST['email'];
-   $telefone = $_POST['telefone'];
-   $mensagem = $_POST['mensagem'];
-
-   $result = mysqli_query($conexao, "INSERT INTO cliente (nome,email,telefone,mensagem) VALUES ('$nome','$email','$telefone','$mensagem')");
-  }
-
-?>
-
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -113,7 +91,7 @@
             <div class="flex-main" >
 
                 <div class="description">
-                    <h1>Transformando ideias em realidade digital <span>.</span></h1>
+                    <h1>Transformando ideias em <span>realidade digital.</span></h1>
                     <p>Tenho experiência em criar interfaces sofisticadas e de alto desempenho, com foco em usabilidade,
                         responsividade e inovação. Transformo ideias em soluções digitais impactantes, alinhando design
                         funcional a tecnologia de ponta para entregar resultados excepcionais.</p>
