--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
 
          <section class="container">
 
-            <form action="cadastro.php" method="POST" class="form">
+            <form class="form">
 
               <div id="form">
 
