--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
                     </div>
                 
                     <div class="input-wraper w100">
-                        <input type="submit" name="submit" value="Enviar">
+                        <input type="submit" name="submit" id="submit" value="Enviar">
                     </div>
 
                 </div>
