--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                     <img src="./img/img-projeto4.png" alt="img-projeto4">
 
                     <h2>auto <span>car</span></h2>
-                    <p>desenvolvido com html5, sass,javascript e git.</p>
+                    <p>desenvolvido com html5, sass,javascript, jquery e git.</p>
 
                     <div class="flex-box-project">
 
