--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     <img src="./img/img-projeto1.png" alt="img-projeto1">
 
                     <h2>burguer <span>smash</span></h2>
-                    <p> Tecnologias que utilizei html5,sass,bootstrap,javascript e git.</p>
+                    <p> Tecnologias que utilizei: html5,sass,bootstrap,javascript e git.</p>
 
                     <div class="flex-box-project">
 
@@ -234,7 +234,7 @@
                     <img src="./img/img-projeto2.png" alt="img-projeto2">
 
                     <h2>dev <span>eletrônico</span></h2>
-                    <p> Tecnologias que utilizei html5,sass,javascript e git.</p>
+                    <p> Tecnologias que utilizei: html5,sass,javascript e git.</p>
 
                     <div class="flex-box-project">
 
@@ -258,7 +258,7 @@
                     <img src="./img/img-projeto3.png" alt="img-projeto3">
 
                     <h2>Dental <span>Ramos</span></h2>
-                    <p> Tecnologias que utilizei html5, sass, jquery,javascript e git.</p>
+                    <p> Tecnologias que utilizei: html5, sass, jquery,javascript e git.</p>
 
                     <div class="flex-box-project">
 
@@ -284,7 +284,7 @@
                     <img src="./img/img-projeto6.png" alt="img-projeto3">
 
                     <h2>toca do <span>açaí</span></h2>
-                    <p> Tecnologias que utilizei html5, sass, tailwind css,javascript e git.</p>
+                    <p> Tecnologias que utilizei: html5, sass, tailwind css,javascript e git.</p>
 
                     <div class="flex-box-project">
 
@@ -310,7 +310,7 @@
                     <img src="./img/img-projeto7.png" alt="img-projeto7">
 
                     <h2>music <span>pro</span></h2>
-                    <p> Tecnologias que utilizei html5, sass, jquery,javascript e git.</p>
+                    <p> Tecnologias que utilizei: html5, sass, jquery,javascript e git.</p>
 
                     <div class="flex-box-project">
 
@@ -336,7 +336,7 @@
                     <img src="./img/img-projeto8.png" alt="img-projeto8">
 
                     <h2>lp <span>moedas</span></h2>
-                    <p> Tecnologias que utilizei html5, sass, jquery,javascript e git.</p>
+                    <p> Tecnologias que utilizei: html5, sass, jquery,javascript e git.</p>
 
                     <div class="flex-box-project">
 
@@ -362,7 +362,7 @@
                     <img src="./img/img-projeto5.png" alt="img-projeto5">
 
                     <h2>bmx <span>pro</span></h2>
-                    <p> Tecnologias que utilizei html5, sass, jquery,javascript e git.</p>
+                    <p> Tecnologias que utilizei: html5, sass, jquery,javascript e git.</p>
 
                     <div class="flex-box-project">
 
@@ -388,7 +388,7 @@
                     <img src="./img/img-projeto9.png" alt="img-projeto9">
 
                     <h2>calculadora <span>max</span></h2>
-                    <p>Tecnologias que utilizei html5, sass,Javascript e git.</p>
+                    <p>Tecnologias que utilizei: html5, sass,Javascript e git.</p>
 
                     <div class="flex-box-project">
 
@@ -414,7 +414,7 @@
                     <img src="./img/img-projeto11.png" alt="img-projeto11">
 
                     <h2>task <span>organization</span></h2>
-                    <p> Tecnologias que utilizei html5, sass,Javascript e git.</p>
+                    <p> Tecnologias que utilizei: html5, sass,Javascript e git.</p>
 
                     <div class="flex-box-project">
 
@@ -440,7 +440,7 @@
                     <img src="./img/img-projeto4.png" alt="img-projeto4">
 
                     <h2>auto <span>car</span></h2>
-                    <p> Tecnologias que utilizei html5, sass,javascript, jquery e git.</p>
+                    <p> Tecnologias que utilizei: html5, sass,javascript, jquery e git.</p>
 
                     <div class="flex-box-project">
 
