--- a/index.html
+++ b/index.html
@@ -210,8 +210,7 @@
                     <img src="./img/img-projeto1.png" alt="img-projeto1">
 
                     <h2>burguer <span>smash</span></h2>
-                    <p>Tecnologias</p>
-                    <p>HTML5, SASS, BOOTSTRAP, JAVASCRIPT e GIT.</p>
+                    <p>desenvolvido com Html5, Sass, Git, Bootstrap e Javascript.</p>
                     <div class="flex-box-project">
 
                         <button class="btn-project">
@@ -234,8 +233,7 @@
                     <img src="./img/img-projeto2.png" alt="img-projeto2">
 
                     <h2>dev <span>eletrônico</span></h2>
-                    <p>Tecnologias</p>
-                    <p>HTML5, SASS, JAVASCRIPT, JQUERY e GIT.</p>
+                    <p>desenvolvido com Html5, Sass, Jquery, Git e Javascript.</p>
                     <div class="flex-box-project">
 
                         <button class="btn-project">
@@ -258,8 +256,7 @@
                     <img src="./img/img-projeto3.png" alt="img-projeto3">
 
                     <h2>Dental <span>Ramos</span></h2>
-                    <p> Tecnologias</p>
-                     <p>HTML5, SASS, JAVASCRIPT, JQUERY e GIT.</p>
+                     <p> desenvolvido com Html5, Sass, Jquery, Git e Javascript.</p>
                     <div class="flex-box-project">
 
                         <button class="btn-project">
@@ -284,8 +281,7 @@
                     <img src="./img/img-projeto6.png" alt="img-projeto3">
 
                     <h2>toca do <span>açaí</span></h2>
-                    <p> Tecnologias</p>
-                    <p>HTML5, SASS, TAILWIND CSS, JAVASCRIPT e GIT.</p>
+                     <p>desenvolvido com Html5, Sass, Tailwind, Git e Javascript.</p>
                     <div class="flex-box-project">
 
                         <button class="btn-project">
@@ -310,8 +306,7 @@
                     <img src="./img/img-projeto7.png" alt="img-projeto7">
 
                     <h2>music <span>pro</span></h2>
-                    <p> Tecnologias</p>
-                    <p>HTML5, SASS, JAVASCRIPT, JQUERY e GIT.</p>
+                    <p>Html5, Sass, Jquery, Git e Javascript.</p>
                     <div class="flex-box-project">
 
                         <button class="btn-project">
@@ -336,8 +331,7 @@
                     <img src="./img/img-projeto8.png" alt="img-projeto8">
 
                     <h2>lp <span>moedas</span></h2>
-                    <p>Tecnologias</p>
-                    <p>HTML5, SASS, JAVASCRIPT, JQUERY e GIT.</p>
+                    <p>desenvolvido com Html5, Sass, Jquery, Git e Javascript.</p>
                     <div class="flex-box-project">
 
                         <button class="btn-project">
@@ -362,8 +356,7 @@
                     <img src="./img/img-projeto5.png" alt="img-projeto5">
 
                     <h2>bmx <span>pro</span></h2>
-                    <p>Tecnologias</p>
-                   <p>HTML5, SASS, JAVASCRIPT, JQUERY e GIT.</p>
+                   <p>desenvolvido com Html5, Sass, Jquery, Git e Javascript.</p>
 
                     <div class="flex-box-project">
 
@@ -389,8 +382,7 @@
                     <img src="./img/img-projeto9.png" alt="img-projeto9">
 
                     <h2>calculadora <span>max</span></h2>
-                    <p>Tecnologias</p>
-                   <p>HTML5, SASS, JAVASCRIPT, JQUERY e GIT.</p>
+                    <p>desenvolvido com Html5, Sass, Git e Javascript.</p>
 
                     <div class="flex-box-project">
 
@@ -416,8 +408,7 @@
                     <img src="./img/img-projeto11.png" alt="img-projeto11">
 
                     <h2>task <span>organization</span></h2>
-                    <p> Tecnologias</p>
-                    <p>HTML5, SASS, JAVASCRIPT, JQUERY e GIT.</p>
+                   <p>desenvolvido com Html5, Sass, Git e Javascript.</p>
 
                     <div class="flex-box-project">
 
@@ -443,8 +434,7 @@
                     <img src="./img/img-projeto4.png" alt="img-projeto4">
 
                     <h2>auto <span>car</span></h2>
-                    <p>Tecnologias</p>
-                    <p>HTML5, SASS, JAVASCRIPT, JQUERY e GIT.</p>
+                   <p>desenvolvido com Html5, Sass, Git e Javascript.</p>
 
                     <div class="flex-box-project">
 
