--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                     <img src="./img/img-projeto7.png" alt="img-projeto7">
 
                     <h2>music <span>pro</span></h2>
-                    <p>Html5, Sass, Jquery, Git e Javascript.</p>
+                    <p>desenvolvido com Html5, Sass, Jquery, Git e Javascript.</p>
                     <div class="flex-box-project">
 
                         <button class="btn-project">
