--- a/index.html
+++ b/index.html
@@ -210,7 +210,25 @@
                     <img src="./img/img-projeto1.png" alt="img-projeto1">
 
                     <h2>burguer <span>smash</span></h2>
-                    <p>desenvolvido com Html5, Sass, Git, Bootstrap e Javascript.</p>
+                      <div class="flex-skills">
+
+                        <div class="border-skills">
+                            <img src="./img/icons8-html5-50.png" alt="html5">
+                        </div>
+
+                        <div class="border-skills">
+                            <img src="./img/icons8-atrevimento-50.png" alt="icons8-atrevimento-50">
+                        </div>
+
+                        <div class="border-skills">
+                            <img src="./img/icons8-git-50.png" alt="icons8-git-50">
+                        </div>
+
+                        <div class="border-skills">
+                            <img src="./img/icons8-javascript-50.png" alt="icons8-javascript-50">
+                        </div>
+
+                     </div>
                     <div class="flex-box-project">
 
                         <button class="btn-project">
